feat(console-web): 修复用户体验，主要是雷达地图
